Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/ManageProjectUsers/RemoveUsers/RemoveUsersList/ListItem/ListItem.scss
+++ b/client/src/components/pages/ManageProjectUsers/RemoveUsers/RemoveUsersList/ListItem/ListItem.scss
@@ -18,6 +18,9 @@
 
         .profile-icon {
             width: 40px;
+            height: 40px;
+            object-fit: cover;
+            object-position: 50% 50%;
             border-radius: 50%;
         }
 
